# axum-todo

./: .env  Cargo.toml  README.md
src/: config.rs  error.rs  form.rs  lib.rs  main.rs  md.rs  middleware.rs  model.rs  password.rs
src/db/: admin.rs  category.rs  mod.rs  paginate.rs  topic.rs
src/handler/: auth.rs  mod.rs
src/handler/backend/: category.rs  mod.rs  topic.rs
src/handler/frontend/: index.rs  mod.rs
src/view/: auth.rs
src/view/backend/: category.rs  index.rs  mod.rs  topic.rs
src/view/frontend/: index.rs
templates/: pagination.html
templates/backend/: base.html
templates/backend/admin/: login.html
templates/backend/category/: add.html  edit.html  index.html  toolbar.html
templates/backend/topic/: index.html
templates/frontend/: base.html
